# testcmake

./: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
src/lib1/: CMakeLists.txt  lib1.cpp  lib1.h  lib1Config.cmake.in
src/lib2/: CMakeLists.txt  lib2.cpp  lib2.h  lib2Config.cmake.in  lib2ConfigTree.cmake.in
